added history and model mapper